<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/playerImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/player_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <!-- Player Position -->
        <TextView
            android:id="@+id/playerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textSize="12sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp">

            <ImageView
                android:id="@+id/leagueImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/player_league" />

            <ImageView
                android:id="@+id/teamImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/player_team" />

            <ImageView
                android:id="@+id/nationalityImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
            android:layout_marginEnd="4dp"
                android:contentDescription="@string/player_nationality" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
