<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="#006400">

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:width="320dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button"
        android:backgroundTint="#90EE90"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="1dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/back_to_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="italic" />
</LinearLayout>
